# ai-browser

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/superpowers/plans/: 2026-05-15-browser-automation-cli.md  2026-05-16-basic-interactions.md  2026-05-16-e2e-tests.md  2026-05-16-humanize-support.md  2026-05-16-playwright-native-accessibility.md  2026-05-16-snapshot-optimization.md
docs/superpowers/specs/: 2026-05-15-browser-automation-cli-design.md  2026-05-15-click-framework-design.md  2026-05-16-basic-interactions-design.md  2026-05-16-e2e-test-design.md  2026-05-16-humanize-design.md  2026-05-16-playwright-native-accessibility-design.md  2026-05-16-snapshot-optimization-design.md
skills/ai-browser/: SKILL.md
src/ai_browser/: __main__.py  ax_tree.py  cli.py  client.py  daemon.py  interactions.py  ref_map.py  snapshot_tree.py
src/auto_browser/: __init__.py  __main__.py  ax_tree.py  browser_manager.py  cli.py  daemon.py  interactions.py  ref_map.py
tests/: conftest.py  test_ax_tree.py  test_browser_manager.py  test_daemon.py  test_interactions.py  test_new_interactions.py  test_ref_map.py  test_snapshot_tree.py
tests/e2e/: conftest.py  test_commands.py  test_page.html
tests/fixtures/: ax_tree_response.json
