[project]
name = "auto-browser"
version = "0.1.0"
description = "Client+daemon browser automation CLI for AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloakbrowser>=0.3.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ab = "auto_browser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_browser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
